# engine

./: .gitignore  CMakeLists.txt  Camera.cpp  Camera.h  Editor.cpp  Editor.h  EditorRenderer.cpp  EditorRenderer.h  GUI.cpp  GUI.h  GUIScreen.cpp  GUIScreen.h  GUIWindow.cpp  GUIWindow.h  GUIWindow.ui  Input.h  Makefile  Mesh.cpp  Mesh.h  MeshImporter.cpp  MeshImporter.h  Model.cpp  Model.h  ModelWindow.cpp  ModelWindow.h  README.md  RenderEngine.cpp  RenderEngine.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  Transform.cpp  Transform.h  Window.cpp  Window.h  camera.cpp  game  main.cpp  mesh.cpp  (+10 more)
Core/: GameObject.cpp  GameObject.h  Light.cpp  Light.h  Mesh.cpp  Model.cpp  Model.h  RenderEngine.cpp  RenderEngine.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  Transform.cpp  Transform.h  Vec3.h  Window.h
Editor/: Editor.cpp  Editor.h  GUIWindow.cpp  GUIWindow.h  ImageEditorFactory.cpp  ImageEditorFactory.h  Inspector.cpp  Inspector.h  PropertyBrowser.cpp  PropertyBrowser.h  SideBarList.cpp  SideBarList.h  SideBarListItem.cpp  SideBarListItem.h  Vec3PropertyManager.h
res/plane/: plane.mtl
res/shaders/: shader.fs  shader.vs
